# PythonOcr

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_gpu.txt  vocab_0-9_A-Z.txt  vocab_rec.old.txt
Ssharp_Ocr_Wpf/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OcrRunner.cs  Ssharp_Ocr_Wpf.csproj  Ssharp_Ocr_Wpf.sln  packages.config
Ssharp_Ocr_Wpf/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Ssharp_Ocr_Wpf/ViewModels/: DisplayBox.cs  MainViewModel.cs  OcrOptionsViewModel.cs  RelayCommand.cs  ViewModelBase.cs
models/runs/周四-2026-04_140325/infer_train/: 10505_7_044756819.json  32_8_094956026.json  5301_6_235910451.json  (+3 more)
qt_app/: __init__.py
qt_app/ocr_rec_app/: README.md  __init__.py  app.py  main.py  model_export.py  ocr_runner.py  viewer.py
qt_app/ocr_rec_app/config/: app_config.json
qt_app/shuyun_pg_ocr_dll/: README.md  ShuyunPgOcrBridge.cs  build_dll.bat  bundle_embed_and_build.bat  requirements_embed.txt  shuyun_pg_ocr.py  shuyun_pg_ocr_dll.csproj  shuyun_pg_ocr_dll.sln
src/pyocr/: __init__.py  cli.py  dataset_prep.py  label_check.py  label_tool.py  paths.py  pipeline.py  yolo_backend.py
src/pythonocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/: 00_一键安装环境.bat  01_标定助手_一键开始.bat  02_自动拆分_同步labels并检查.bat  03_一键训练_det_rec并推理抽查.bat  04_一键检查_补标后复查.bat  05_越界类别清单.bat  06_检查标定内容.bat  07_类别统计_report.bat  08_统计类别图片.bat  GPU训练指令.txt  rec_check_text.py  rec_class_images.py  rec_class_stats.py  rec_out_of_range.py  自动拆分
(+4 files in other folders)
