[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonocr"
version = "0.1.0"
description = "YOLO-based OCR: detection + recognition + Qt trainer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ultralytics==8.4.23",
  "opencv-python==4.13.0.92",
  "numpy==1.26.4",
  "Pillow==12.1.1",
  "pydantic==2.12.5",
  "PySide6==6.10.2",
  "tqdm==4.67.3",
  "cryptography==42.0.8",
  "onnx==1.16.1",
  "onnxslim==0.1.71",
  "onnxruntime-gpu==1.18.1",
]

[project.scripts]
pyocr = "pyocr.cli:main"
pyocr-qt = "qt_app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
